--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         
         <div class="image-container">
             <!-- Replace with your image paths or base64 data -->
-            <img src="D:\website\Birthday Wish\image\image_1.jpg" alt="BEAUTIFUL">
+            <img src="image_1.jpg" alt="BEAUTIFUL">
             <img src="D:\website\Birthday Wish\image\image_2.jpg" alt="BE STRONG">
             <img src="D:\website\Birthday Wish\image\image_3.jpg" alt="STRIVE">
             <img src="D:\website\Birthday Wish\image\image_4.jpg" alt="STRIVE">
