--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
     <!-- Audio element (hidden) -->
     <audio id="birthdayAudio" loop>
-        <source src="D:\website\Birthday Wish\Music\Birthday_music.mp3" type="audio/mpeg">
+        <source src="Birthday_music.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
 
